fix: align color-swatches to the left

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1564,7 +1564,7 @@ a.product__text {
 .swatch {
   display: inline-flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: left;
   margin-bottom: 0;
   margin-right: auto;
   margin-left: auto;
